Add: when a bomb is clicked, the background color of the box becomes red and game stops

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@ header {
     background-color: #87BCDE;
 }
 
+.bomb {
+    background-color: red;
+}
+
 /* ********** FOOTER ********** */
 footer {
     height: var(--footer-height);
